[tool.poetry]
name = "aiosbb"
version = "0.1.0"
description = "asyncio based SysBotBase client"
authors = ["Z1R343L <jan2705g@egmail.com>"]
packages = [
    { include = "aiosbb" },
    { include = "aiosbb/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
